@@ -1,3 +1,8 @@
+2008-06-15  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* funciones.sql (get_invoice_detail): Added funciton get an
+	invoice detail.
+
 2008-06-11  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* funciones.sql (get_guide_detail): Added function to get the
